RESOLVED FIXED276523
[RenderTreeBuilder] Crash in WebCore::RenderLayer::removeChild when continuation is present
https://bugs.webkit.org/show_bug.cgi?id=276523
Summary [RenderTreeBuilder] Crash in WebCore::RenderLayer::removeChild when continuat...
alan
Reported 2024-07-11 20:30:07 PDT
Attachments
[fast-cq]Patch (7.77 KB, patch)
2024-07-11 20:46 PDT, alan
no flags
alan
Comment 1 2024-07-11 20:46:35 PDT
Created attachment 471873 [details] [fast-cq]Patch
EWS
Comment 2 2024-07-12 08:08:41 PDT
Committed 280907@main (2536ef8fa811): <https://commits.webkit.org/280907@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471873 [details].
Note You need to log in before you can comment on or make changes to this bug.